deploy: bb3bea5dd8aaa9c0a958f71a468897cee06e7d3a

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         ],
         layout: "StandaloneLayout",
         configUrl: "swagger-config.json",
+        "urls.primaryName": "users-openapi.yml",
       })
       
       
